# dgp

./: Cargo.toml
examples/: custom-widget.rs  egui-hello-world.rs  egui-plot.rs  hw1-fitting.rs  integration-plotters-iced.rs  plotters-example.rs  tour.rs
src/: lib.rs
src/fitting/: mod.rs
