[package]
edition = "2021"
name = "dgp"
version = "0.1.0"

[[example]]
name = "tour"

[[example]]
name = "plotters-example"

[[example]]
name = "integration-plotters-iced"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9"
iced = {version = "0.3", features = ["image", "debug" , "canvas"]}
iced_native = "0.3"
nalgebra = "0.30.1"
plotters = "0.3"
log="0.4"